--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,12 @@
 			<artifactId>spring-cloud-netflix-eureka-client</artifactId>
 			<version>3.0.2</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>5.3.6</version>
+        </dependency>
+    </dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
